2009-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Update to Autoconf 2.64.

2009-07-25 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders\toopol.c: Fixed several issues. Added possibility to read
	TopoL level 2 images.

2009-07-25 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* VisualMagick\configure\configure.cpp: Fixed library absolute path issue.

2009-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/random.c (DestroyMagickRandomGenerator): Trick to free
	thread specific random kernel contexts simply locks up with MSVC's
	OpenMP, so remove this functionality.

2009-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/random.c (DestroyMagickRandomGenerator): Cleanup thread
	specific random kernel data.

	* magick/tsd.c (MagickTsdKeyCreate): Fix glitch when built without
	any threads support.

2009-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/benchmarks.rst: Update GraphicsMagick vs ImageMagick image
	processing benchmark results.

2009-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/OpenMP.rst: Update performance measurements for readily
	available systems.

	* NEWS.txt: Updated to reflect latest changes.

2009-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.2.38.

2009-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageInfo): Default interlace for ImageInfo
	is now UndefinedInterlace so that it is possible to preserve the
	original interlace setting for the image file.  Code depending on
	the previous default setting of NoInterlace is adjusted to suit.
	This is a potentially risky change given the brittle nature of
	some of the legacy code.

	* coders/tiff.c (ReadTIFFImage): Stripped reader needs to read
	planar TIFF plane-wise in order to work with libtiff's internal
	buffering.
	(ReadTIFFImage): Tiled reader needs to read planar TIFF plane-wise
	in order to work with libtiff's internal buffering.