@@ -24,6 +24,10 @@
 2009-07-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> coders/pcx.c (ReadPCXImage): Detect improper rows, columns, or
+        depth.  Fixes CVE-2008-1097 "Memory corruption in ImageMagick's
+        PCX coder".
+
   <LI> configure.ac: Update to Autoconf 2.64.
 
 </UL>
