@@ -1,5 +1,9 @@
 2009-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/pcx.c (ReadPCXImage): Detect improper rows, columns, or
+	depth.  Fixes CVE-2008-1097 "Memory corruption in ImageMagick's
+	PCX coder".
+
 	* configure.ac: Update to Autoconf 2.64.
 
 2009-07-25 Fojtik Jaroslav  <JaFojtik@seznam.cz>
